--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,17 +1,18 @@
 <h1><%= "Order ##{"%07d" % @order.id.to_s}" %></h1>
 
-<ul>
-<%= @items.each do |order_item| %>
-	<li><%= order_item.item.title %></li>
-	<li><%= order_item.item_quantity %></li>
-	<li><%= (order_item.item_quantity.to_i * order_item.item_price.to_i) %></li>
-	<li><%= @order.status %>
-		<% if @order.status == "completed" || @order.status == "cancelled" %>
-			: <%= @order.updated_at %>
-		<% end %>
-	</li>
-	<li><%= @order.total_price %></li>
-	<li><%= @order.created_at %></li>
-<% end %>
-</ul>
-
+<table class="bordered striped highlight centered responsive-table">
+  <thead>
+    <tr>
+      <th data-field="Item Title">Item Title</th>
+			<th data-field="Item Quantity">Item Quantity</th>
+			<th data-field="Item Total">Item Total</th>
+			<th data-field="Order Status">Order Status</th>
+      <th data-field="TotalPrice">Total Price</th>
+      <th data-field="CreatedAt">Date Ordered</th>
+    </th>
+  </tr>
+</thead>
+<tbody>
+  <%= render partial: "partials/order_items", collection: @items, as: :order_item, locals: {order: @order} %>
+</tbody>
+</table>
