--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -9,8 +9,7 @@
   </tr>
 </thead>
 <tbody>
-
-  <%= render partial: "orders", collection: current_user.orders, as: :order %>
+  <%= render partial: "partials/orders", collection: current_user.orders, as: :order %>
 </tbody>
 </table>
 <div class="right">
