--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1> <%= @user.first_name %>'s Profile</h1>
-</br>
 <h2> Username: <%= @user.username %> </h2>
+<h2>
+  <%= link_to "Past Orders", orders_path %>
+</h2>
