--- a/app/views/partials/_order_items.html.erb
+++ b/app/views/partials/_order_items.html.erb
@@ -2,12 +2,12 @@
 
   <td><%= order_item.item.title %></td>
   <td><%= order_item.item_quantity %></td>
-  <td><%= (order_item.item_quantity.to_i * order_item.item_price.to_i) %></td>
+  <td><%= number_to_currency(order_item.item_quantity.to_i * order_item.item_price.to_i) %></td>
   <td><%= @order.status.capitalize %>
     <% if @order.status == "completed" || @order.status == "cancelled" %>
     : <%= @order.updated_at %>
     <% end %></td>
-  <td><%= @order.total_price %></td>
+  <td><%= number_to_currency(@order.total_price) %></td>
   <td><%= @order.created_at %></td>
 
 </tr>
