--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <div class="checkout container">
     <div class="col s12 m5">
       <div class="card-panel">
-        <h3 class="center"> Past Orders: </h3>
+        <h3 class="center"> Past Orders </h3>
           <table class="bordered striped highlight centered responsive-table">
             <thead>
               <tr>
